@@ -8,6 +8,8 @@
 * Adding #345 Change the default priority of spawned tools (thanks to Maximo Piva)
 * Adding #371 Add "Stay on Top" (thanks to Hexenhammer)
 * Fixing settings panel would always want a restart if any paths to executables were filled on Windows
+* Fixing #374 name of hdr10plus tool name and adding link in settings (thanks to Richard Harmonson)
+* Fixing check for output same as source on file systems that don't support resolve
 * Removing support and builds for Windows 7 and 8
 * Removing support and builds for MacOS 10
 
